# hacker-programs

./: Cargo.toml  README.md  hello.txt  my_error.txt
minigrep/: Cargo.toml
minigrep/src/: inventory.rs  lib.rs
minigrep/src/inventory/: custom_closures.rs  store.rs
minisearch/: Cargo.toml
src/: main.rs
week-preparation-kit/: Cargo.toml
week-preparation-kit/src/: lib.rs
week-preparation-kit/src/kits/: comparison_sorting.rs  diagonal_difference.rs  lonely_integer.rs  min_max_sum.rs  mod.rs  proportion.rs  time_conversion.rs  tower_breaker.rs  zig_zag_sequence.rs
week-preparation-kit/tests/: comparison_sorting_test.rs  diagonal_difference_test.rs  lonely_integer_test.rs  min_max_sum_test.rs  proportion_test.rs  time_conversion_test.rs
