
[workspace]
members = [
  # "minisearch",        // it is used when i use internal repo - minisearch
  "week-preparation-kit"
]


[package]
name = "hacker-programs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
week-preparation-kit = { path = "./week-preparation-kit", default = false, features = ["tower-breaker-winner"] }
# minisearch = { path = "./minisearch" }

# Developed by me
minisearch = "0.1.1"

[profile.dev]
opt-level = 0


