[package]
name = "minisearch"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A mini search which can handle both - case sensitive or in-sensitive both."
authors = ["Minigrep search <dhimananuj93@gmail.com>"]
repository = "https://github.com/enosuity/hacker-programs/tree/main/minisearch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
