[package]
name = "week-preparation-kit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = [
  "min_and_max",
  "proportion",
  "time-conversion",
  "lonely-int",
  "diagonal-diff",
  "comparison-sort"
]

proportion = []
min_and_max = []
time-conversion = []
lonely-int = []
diagonal-diff = []
comparison-sort = []



